feat: user activation handler
